# commercetxt

./: .gitignore  CATEGORY.md  CHANGELOG.md  CONTEXT.md  CONTRIBUTORS.md  FAQ.md  MANIFESTO.md  POSITIONING.md  README.md
parsers/python/: README.md  pyproject.toml
parsers/python/commercetxt/: __init__.py  async_parser.py  bridge.py  cache.py  catalog_filters_validator.py  cli.py  commerce.txt  constants.py  enhanced_variants_validator.py  limits.py  logging_config.py  metrics.py  model.py  parser.py  resolver.py  security.py  validator.py
parsers/python/commercetxt/rag/: __init__.py  async_pipeline.py  container.py  exceptions.py  metrics.py  pipeline.py
parsers/python/commercetxt/rag/core/: __init__.py  constants.py  filters.py  generator.py  (+3 more)
parsers/python/commercetxt/validators/: __init__.py  attributes.py  core.py  policies.py
parsers/python/examples/: brand_slug_demo.py  rag_deduplication_demo.py  rag_full_demo.py  rag_quickstart.py
parsers/python/tests/: conftest.py  pytest.ini  test_async.py  test_async_pipeline_monitoring.py  test_bridge.py  test_catalog_filters_validator.py  test_cli.py  test_comparator.py  test_enhanced_variants_validator.py  test_full_stack_integration.py  test_fuzz_parser.py  test_integration.py  test_integration_real_data.py  test_metrics.py  test_mutations.py  test_normalizer_performance.py  test_parser.py  test_properties.py  test_rag.py  test_rag_caching.py  test_rag_drivers.py  test_rag_generator.py  test_rag_tools.py  test_resolver.py  test_schema_bridge.py  test_security.py  test_stress.py  test_validator.py  test_vectors.py
(+433 files in other folders)
